scripts/nullness/original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8.txt
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Status.java:5: error: [initialization.fields.uninitialized] the constructor does not initialize fields: status
	public Status(){}
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Request.java:12: error: [initialization.fields.uninitialized] the constructor does not initialize fields: method, url, protocol
	public Request(){};
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Method.java:5: error: [initialization.fields.uninitialized] the constructor does not initialize fields: method
	public Method() {};
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Url.java:6: error: [initialization.fields.uninitialized] the constructor does not initialize fields: path, extension
	public Url(){};
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Protocol.java:7: error: [initialization.fields.uninitialized] the constructor does not initialize fields: protocol, version
	public Protocol(){}
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Path.java:5: error: [initialization.fields.uninitialized] the constructor does not initialize fields: path
	public Path(){};
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/request/Extension.java:5: error: [initialization.fields.uninitialized] the constructor does not initialize fields: extension
	public Extension(){};
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/record/Date.java:10: error: [initialization.fields.uninitialized] the constructor does not initialize fields: date
	public Date(){
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/allmodels/Record.java:16: error: [initialization.fields.uninitialized] the constructor does not initialize fields: userIp, userTime, request, userStatus, size
	public Record(){}
	       ^
../original/urlfd6bd5edbe_AntonPoznyak_LogFileGenerator_tgz-pJ8-logfilegen_StartMePleaseJ8/src/logfilegen/forFile/Reader.java:24: error: [return] incompatible types in return.
			return null;
			       ^
  type of expression: null (NullType)
  method return type: @Initialized @NonNull String
10 errors
